# pocket-ml-testbench

./: .dockerignore  .gitignore  .pre-commit-config.yaml  LICENSE  README.md
.github/: path-filter.yml
.github/linters/: pyproject.toml
.github/workflows/: check_path.yml  workflow.yml
apps/: README.md
apps/python/base_image/: Dockerfile  README.md  build.sh  pyproject.toml
apps/python/evaluator/: Dockerfile  README.md  build.sh  config.sample.json  pyproject.toml  requirements.txt
apps/python/evaluator/activities/: get_task_data.py  lookup_tasks.py  trigger_manager_analysis.py
apps/python/evaluator/activities/lmeh/: evaluate.py
apps/python/evaluator/activities/signatures/: identity_evaluate.py  model_config_evaluate.py  tokenizer_evaluate.py
apps/python/evaluator/app/: app.py  config.py
apps/python/evaluator/worker/: main.py
apps/python/evaluator/workflows/: evaluator.py  lookup_tasks.py
apps/python/sampler/: Dockerfile  README.md  build.sh  config.sample.json  package.json  pyproject.toml  requirements.txt  requirements_dev.txt  sampler.py
apps/python/sampler/activities/: cumm_sum.py  lookup_task.py  register_task.py  sample.py  utils.py
apps/python/sampler/activities/lmeh/: register_task.py  sample.py
apps/python/sampler/activities/lmeh/utils/: generator.py  mongodb.py  register.py  sql.py  tokenizers.py
apps/python/sampler/activities/lmeh/utils/pocket_lm_eval/api/: configurable_task.py  task.py
apps/python/sampler/activities/lmeh/utils/pocket_lm_eval/models/: pocket_network.py
apps/python/sampler/activities/lmeh/utils/pocket_lm_eval/tasks/: __init__.py
apps/python/sampler/activities/signatures/: signatures.py
apps/python/sampler/activities/signatures/config/: config.py
apps/python/sampler/activities/signatures/identity/: identity.py  prompt_gen.py
apps/python/sampler/activities/signatures/tokenizer/: tokenizer.py
apps/python/sampler/app/: app.py  config.py
apps/python/sampler/protocol/: protocol.py
apps/python/sampler/src/: __main__.py
apps/python/sampler/utils/: generator.py  lmeh.py
apps/python/sampler/utils/pocket_lm_eval/api/: task.py
apps/python/sampler/utils/pocket_lm_eval/tasks/: __init__.py
apps/python/sampler/worker/: main.py
apps/python/sampler/workflows/: cumm_sum.py  register.py  sampler.py
docker-compose/: .gitignore  README.md
docker-compose/apps/: .env  docker-compose.yaml  many_registers.sh  sample.env
docker-compose/dependencies/: .env
docker-compose/dev/: README.md
docker-compose/morse-poc/: .env.sample  README.md  docker-compose.yaml
infrastructure/dev/: .env  README.md  docker-compose.yaml
model-deployment/: README.md
model-deployment/diffusers/: README.md  config.yaml
model-deployment/llm/: .env.sample  README.md  chatml-template.jinja2  docker-compose.yaml
morse-localnet-poc/: README.md  chains.json  data_diffuser.json  data_llm.json  genesis.json  localnet_test.ipynb
reports/: .gitignore  README.md
reports/1/: main.tex  references.bib  report_I.tex
reports/2024-03/: report_I.tex
reports/2024-04/: CSSullivanBusinessReport.cls  acronym_def.tex  references.bib  report.tex
reports/2024-05/: acronym_def.tex  references.bib  report.tex
reports/2024-06/: acronym_def.tex  references.bib  report.tex
taxonomies/: babisteps_v0-1.tax  babisteps_v0.tax  coding_and_structured_language_v0.tax  coding_v0.tax  foundational_knowledge_v0.tax  general_skills_v0-1.tax  general_skills_v0-2.tax  general_skills_v0-3.tax  general_skills_v1-1.tax  general_skills_v1-2.tax  general_skills_v1-3.tax  general_skills_v1-4.tax  general_skills_v1.tax  liveness_v0-1.tax  liveness_v0-2.tax  liveness_v0.tax  math_v0.tax  open_llm_leaderboard_v2.tax  pnyx_categories_v1-1.tax  pnyx_categories_v1.tax  pnyx_categories_v2.tax  pnyx_leaderboard_v1-1.tax  pnyx_leaderboard_v1.tax  pnyx_leaderboard_v2.tax  pnyx_leaderboard_v3.tax  reasoning_and_logic_v0.tax  social_and_ethical_v0.tax  tool_and_instruction_compliance_v0.tax
tilt/: .sample.env  README.md  Tiltfile  delete_tasks.py  refresh_tasks.py  trigger_tasks.py
(+343 files in other folders)
