[tool.poetry]
name = "python_base_image"
version = "0.1.0"
description = ""
authors = ["Nicolas Aguirre <nicolas@potkscan.com>", "Jorge Cuesta <jorge@potkscan.com>, Ramiro Rodriguez Colmeiro <ramiro@poktscan.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
temporalio = "^1.10"
structlog = "^25.5.0"
pydantic = "^2.7.0"
asyncpg = "^0.29.0"
motor = "^3.4.0"
datasets = "^3.2.0"
huggingface-hub = "^0.27.1"
reasoning-gym = "0.1.24"
a-vert = "0.3.5"
transformers = "^4.48.0"
openai = ">=1.52.0"
lm-eval = {path = "./lm-evaluation-harness/dist/lm_eval-0.4.12.dev0-py3-none-any.whl", extras = ["math", "dev", "ifbench"]}
lm-taxonomies = {path = "lm-taxonomies/dist/lm_taxonomies-0.1.0-py3-none-any.whl"}


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"
pre-commit = "^4.2.0"


[[tool.poetry.source]]
name = "pytorch_cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
