[tool.poetry]
name = "evaluator"
version = "0.1.0"
description = ""
authors = ["Nicolas Aguirre <nicolas@potkscan.com>", "Jorge Cuesta <jorge@potkscan.com>, Ramiro Rodriguez Colmeiro <ramiro@poktscan.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
lm-eval = {version = "^0.4.2", extras = ["dev","openai"]}
temporalio = "^1.5.1"
structlog = "^24.1.0"
pydantic = "^2.7.0"
asyncpg = "^0.29.0"
motor = "^3.4.0"



[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
