[tool.poetry]
name = "sampler"
version = "0.1.0"
description = ""
authors = ["Nicolas Aguirre <nicolas@potkscan.com>", "Jorge Cuesta <jorge@potkscan.com>, Ramiro Rodriguez Colmeiro <ramiro@poktscan.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
lm-eval = {version = "^0.4.2", extras = ["dev"]}
temporalio = "^1.5.1"
structlog = "^24.1.0"
psycopg2 = "^2.9.9"
sqlalchemy = "^2.0.29"
pydantic = "^2.7.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
