[tool.poetry]
name = "sampler"
version = "0.1.0"
description = ""
authors = ["Nicolas Aguirre <nicolas@potkscan.com>", "Jorge Cuesta <jorge@potkscan.com>, Ramiro Rodriguez Colmeiro <ramiro@poktscan.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
lm-eval = {version = "^0.4.2", extras = ["dev","openai","math"]}
temporalio = "^1.5.1"
structlog = "^24.1.0"
pydantic = "^2.7.0"
asyncpg = "^0.29.0"
motor = "^3.4.0"
datasets = "^3.2.0"
huggingface-hub = "^0.27.1"
langdetect = "^1.0.9"
immutabledict = "^4.2.1"
torch = {version = "^2.5.1+cpu", source = "pytorch_cpu"}
torchvision = {version = "^0.20.1+cpu", source = "pytorch_cpu"}
transformers = "^4.48.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"


[[tool.poetry.source]]
name = "pytorch_cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
